testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpression(target=es2015).errors.txt
index.js(1,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== index.js (1 errors) ====
    module.exports = class Thing {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        /**
    ~~~~~~~
         * @param {number} p
    ~~~~~~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        constructor(p) {
    ~~~~~~~~~~~~~~~~~~~~
            this.t = 12 + p;
    ~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.